@@ -24,7 +24,7 @@ dist-hook:
 SUBDIRS = . cairo
 
 AM_CPPFLAGS = -I$(top_srcdir)/$(CAIRO_SRC) $(PIXMAN_INCLUDES) -DCAIRO_NO_MUTEX
-AM_CFLAGS = $(CAIRO_ATTRIBUTE_FLAG)
+AM_CFLAGS = $(CAIRO_ATTRIBUTE_FLAG) $(VISIBILITY_CFLAGS)
 
 noinst_LIBRARIES = libcairo.a
 
